@@ -1,6 +1,7 @@
 local ItemAuditor = select(2, ...)
 local DisplayInvested = ItemAuditor:NewModule("DisplayInvested")
 
+
 local AceGUI = LibStub("AceGUI-3.0")
 local ScrollingTable = LibStub("ScrollingTable")
 
